fix(topbar): fix z-index change that causing the alerts to display behind the TopBar

--- a/src/components/organisms/TopBar/TopBar.module.scss
+++ b/src/components/organisms/TopBar/TopBar.module.scss
@@ -6,7 +6,7 @@
 	display: flex;
 	justify-content: space-between;
 	padding: 15px 25px;
-	z-index: 100;
+	z-index: 1;
 	position: relative;
 
 	.nav {
